# substrate-node-template

pallets/ocw/: Cargo.toml  README.md
pallets/ocw/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
